fixed spacing

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -390,7 +390,7 @@ button.view-transcript {
 
 #mainsite-refer {
     position: absolute;
-    top: 0;
+    top: 15px;
     left: 0;
     background-color: white;
     padding: 0.5em 0.5em 0.25em;
